<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quiz for employment of Android Programmers</string>
    <string name="bluetooth">bluetooth</string>
    <string name="memory">memory</string>
    <string name="calculate">calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="c">C</string>
    <string name="u00f7">÷</string>
    <string name="dot">.</string>
    <string name="_8">8</string>
    <string name="equal">=</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="x">x</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="percent">%</string>
    <string name="_c">( )</string>
    <string name="occupied">Occupied</string>
    <string name="free">Free</string>

</resources>