<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout 
        
        
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="0.5dp"
        tools:context="projects.eloy.zone.androidtestproject.MainActivity">


        <LinearLayout
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                android:textDirection="rtl"
                android:id="@+id/textView_input_numbers"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textColor="@android:color/holo_red_light"
                android:textSize="40sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/c"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_parentheses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_c"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/percent"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/u00f7"
                android:textColor="@android:color/holo_red_light"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_7"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_8"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_9"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/x"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_4"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_5"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_6"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_subtraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/minus"
                android:textColor="@android:color/holo_red_light"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_1"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_2"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/_3"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_addition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/plus"
                android:textColor="@android:color/holo_red_light"
                android:textSize="40sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="2"
                android:background="@android:color/black"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/dot"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

           <Button
                style="@style/ShapeAppearanceOverlay.Material3.Button"
                android:id="@+id/button_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/equal"
                android:textColor="@android:color/white"
                android:textSize="40sp" />
        </LinearLayout>


    </LinearLayout>
</layout>